Another update to avoid error 400
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,10 +25,7 @@ jobs:
     - name: Build with Maven      
       run: mvn -B clean package --file pom.xml      
     - name: Deploy with Maven
-      shell: bash
-      env:
-        PAT: ${{ secrets.PAT }}
       run: |
         mkdir -p ~/.m2
-        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd\"><servers><server><id>github</id><username>x-access-token</username><password>$PAT</password></server><server><id>github-snapshot</id><username>x-access-token</username><password>$PAT</password></server><server><id>github-release</id><username>x-access-token</username><password>$PAT</password></server></servers></settings>" > ~/.m2/settings.xml
-        mvn -B clean deploy      
+        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd\"><servers><server><id>github</id><username>${github.user}</username><password>${github.password}</password></server><server><id>github-snapshot</id><username>${github.user}</username><password>${github.password}</password></server><server><id>github-release</id><username>${github.user}</username><password>${github.password}</password></server></servers></settings>" > ~/.m2/settings.xml
+        mvn -B -Dgithub.user=${{ secrets.github_user }} -Dgithub.password=${{ secrets.github_token }} clean deploy      
