--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,4 +26,4 @@ jobs:
       run: mvn -B clean package --file pom.xml      
     - name: Deploy with Maven
       run: |
-        mvn -B -Dgithub.user=${{ secrets.github_user }} -Dgithub.password=${{ secrets.github_token }} -s settings.xml clean deploy      
+        mvn -B -Dgithub.user=x-access-token -Dgithub.password=${{ secrets.PAT }} -s settings.xml clean deploy      
