--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -192,7 +192,8 @@
 					</configuration>
 				</plugin>
 			</plugins>
-		</pluginManagement>		
+		</pluginManagement>
+		<finalName>${groupId}.${artifactId}-${version}</finalName>		
 	</build>
 	<dependencies>
 		<dependency>
