--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,5 +25,7 @@ jobs:
     - name: Build with Maven      
       run: mvn -B clean package --file pom.xml      
     - name: Deploy with Maven
+      env:
+           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        mvn -B -Dgithub.user=x-access-token -Dgithub.password=${{ secrets.PAT }} -s settings.xml clean deploy      
+        mvn -B -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml clean deploy      
