--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -193,7 +193,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<finalName>${groupId}.${artifactId}-${version}</finalName>		
+		<finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>		
 	</build>
 	<dependencies>
 		<dependency>
