--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,12 +20,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Copy toolchain
-      run: cp toolchains.xml ~/.m2/toolchains.xml
     - name: Build with Maven      
-      run: mvn -B clean package --file pom.xml      
+      run: |
+      cp toolchains.xml ~/.m2/toolchains.xml
+      mvn -B clean package --file pom.xml      
     - name: Deploy with Maven
       env:
            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
+      run:
         mvn -B -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml clean deploy      
