--- a/releng/org.enterprisedomain.workbench.ide.product/pom.xml
+++ b/releng/org.enterprisedomain.workbench.ide.product/pom.xml
@@ -3,6 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.workbench.product</artifactId>
 	<packaging>eclipse-repository</packaging>
 	<version>0.8.1-SNAPSHOT</version>
@@ -20,6 +21,7 @@
 				<version>${tycho.version}</version>
 				<configuration>
 					<includeAllDependencies>true</includeAllDependencies>
+					<createArtifactRepository>true</createArtifactRepository>
 				</configuration>
 			</plugin>
 			<plugin>
