--- a/releng/org.enterprisedomain.workbench.ide.product/pom.xml
+++ b/releng/org.enterprisedomain.workbench.ide.product/pom.xml
@@ -14,6 +14,15 @@
 		<relativePath>../../</relativePath>
 	</parent>
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-publisher-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
