--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -55,7 +55,7 @@
 						<id>package-feature</id>
 						<configuration>
 							<appendAssemblyId>false</appendAssemblyId>	
-							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
+							<finalName>${project.groupId}.${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
 						</configuration>
 					</execution>					
 				</executions>
