Rename and move bundle and move product
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.workbench/.project
+++ b/bundles/org.enterprisedomain.workbench/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.enterprisedomain.workbench.ide</name>
+	<name>org.enterprisedomain.workbench</name>
 	<comment></comment>
 	<projects>
 	</projects>
