--- a/bundles/org.enterprisedomain.workbench/pom.xml
+++ b/bundles/org.enterprisedomain.workbench/pom.xml
@@ -9,6 +9,6 @@
 		<version>0.8.1-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<artifactId>org.enterprisedomain.workbench.ide</artifactId>
+	<artifactId>org.enterprisedomain.workbench</artifactId>
 	<packaging>eclipse-plugin</packaging>
 </project>
