--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,19 @@ jobs:
         java-version: 11
     - name: Copy toolchain      
       run: |
-       echo $JAVA_HOME
+       echo "<toolchains xmlns=\"http://maven.apache.org/TOOLCHAINS/1.1.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+  xsi:schemaLocation=\"http://maven.apache.org/TOOLCHAINS/1.1.0 http://maven.apache.org/xsd/toolchains-1.1.0.xsd\">
+	  <toolchain>
+	    <type>jdk</type>
+	    <provides>
+	      <version>11</version>
+	      <vendor>openjdk</vendor>     
+	    </provides>
+	    <configuration>
+	        <jdkHome>/"+$JAVA_HOME+"</jdkHome>
+	    </configuration>
+	  </toolchain>
+  </toolchains>" > toolchains.xml
        cp toolchains.xml ~/.m2/toolchains.xml
     - name: Build with Maven      
       run:
