--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>bundles</artifactId>
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>configuration</artifactId>
-		<version>0.8.1-SNAPSHOT</version>
+		<version>0.8.01-SNAPSHOT</version>
 		<relativePath>./releng/org.enterprisedomain.configuration</relativePath>
 	</parent>
     <scm><url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url></scm>
@@ -34,7 +32,7 @@
 		<module>releng/org.enterprisedomain.target</module>
 	</modules>
 	<properties>
-		<surefire.moduleProperties></surefire.moduleProperties>
+		<surefire.moduleProperties />
 	</properties>
 	<profiles>
 		<profile>
