--- a/examples/org.enterprisedomain.sample/pom.xml
+++ b/examples/org.enterprisedomain.sample/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.enterprisedomain.org.enterprisedomain</groupId>
 			<artifactId>update</artifactId>
-			<version>0.8.1-snapshot</version>
+			<version>0.8.01-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<packaging>pom</packaging>
