--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,5 +31,5 @@ jobs:
       env:
            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-       mvn -B release:prepare -Dtag=v0.8.10 -DreleaseVersion=0.8.10 -DdevelopmentVersion=0.8.10-SNAPSHOT
+       mvn -B release:prepare -DreleaseVersion=0.8.10 -DdevelopmentVersion=0.8.10-SNAPSHOT
        mvn release:perform -B -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml    
