--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,5 @@ jobs:
       env:
            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-       mvn release:rollback
-#       mvn -B release:prepare -DreleaseVersion=0.8.10 -DdevelopmentVersion=0.8.10-SNAPSHOT
-#       mvn release:perform -B -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml    
+        mvn -B release:prepare -Dtag=v0.8.01 -DreleaseVersion=0.8.01 -DdevelopmentVersion=0.8.01-SNAPSHOT
+        mvn release:perform -B -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml    
