--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>bundles</artifactId>
 	<packaging>pom</packaging>
@@ -9,7 +11,10 @@
 		<version>0.8.10-SNAPSHOT</version>
 		<relativePath>./releng/org.enterprisedomain.configuration</relativePath>
 	</parent>
-    <scm><url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url></scm>
+	<scm>
+		<connection>scm:git:https://github.com/enterpriseDomain/ClassMaker</connection>
+		<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
+	</scm>
 
 	<modules>
 		<module>bundles/org.enterprisedomain.classmaker</module>
@@ -44,5 +49,5 @@
 				<surefire.moduleProperties>--add-modules=ALL-SYSTEM</surefire.moduleProperties>
 			</properties>
 		</profile>
-	</profiles>	
+	</profiles>
 </project>
