Another minor update
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -49,7 +49,7 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<build>
-		<finalName>${project.artifactId}-${project.version}</finalName>
+		<finalName>${project.artifactId}-${product.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
