--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>configuration</artifactId>
+		<artifactId>org.enterprisedomain.configuration</artifactId>
 		<version>0.8.10-SNAPSHOT</version>
 		<relativePath>./releng/org.enterprisedomain.configuration</relativePath>
 	</parent>
