--- a/bundles/org.enterprisedomain.classmaker/pom.xml
+++ b/bundles/org.enterprisedomain.classmaker/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>org.enterprisedomain.classmaker</artifactId>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>bundles</artifactId>
+		<artifactId>org.enterprisedomain.bundles</artifactId>
 		<version>0.8.10-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
