--- a/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
@@ -6,7 +6,7 @@
 	
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>bundles</artifactId>
+		<artifactId>org.enterprisedomain.bundles</artifactId>
 		<version>0.8.10-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
