--- a/tests/org.enterprisedomain.classmaker.tests/pom.xml
+++ b/tests/org.enterprisedomain.classmaker.tests/pom.xml
@@ -7,7 +7,7 @@
 
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>bundles</artifactId>
+		<artifactId>org.enterprisedomain.bundles</artifactId>
 		<version>0.8.10-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
