--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath>../../</relativePath>
 	</parent>
 	<artifactId>org.enterprisedomain.target</artifactId>
-	<version>0.8.10-SNAPSHOT</version>		
+	<version>0.8.10-SNAPSHOT</version>
 	<packaging>eclipse-target-definition</packaging>
 	<build>
 		<plugins>
@@ -31,7 +31,8 @@
 						<phase>package</phase>
 						<configuration>
 							<appendAssemblyId>false</appendAssemblyId>
-							<finalName>${project.artifactId}-${unqualifiedVersion}.${buildQualifier}</finalName>
+							<finalName>${project.artifactId}-${baseversion}.{buildQualifier}</finalName>
+							<strictVersions>false</strictVersions>
 						</configuration>
 					</execution>
 				</executions>
