Try another way
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,5 @@ jobs:
     - name: Deploy with Maven
       env:
            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        mvn -B release:prepare -Dtag=v0.8.10 -DreleaseVersion=0.8.10 -DdevelopmentVersion=0.8.10-SNAPSHOT -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml
-        mvn -B release:perform -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml
+      run:
+        mvn -B  clean deploy scm:tag -DVERSION_NUMBER=0.8.10 -Dgithub.user=x-access-token -Dgithub.password=${{ env.GH_TOKEN }} -s settings.xml
