--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -16,20 +16,6 @@
 			osgi.ee;osgi.ee="JavaSE";version:List="1.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8,9,10,11"
 		</org.osgi.framework.system.capabilities>
 	</properties>
-	<profiles>
-		<profile>
-			<id>snapshot-deploy-url-override</id>
-			<activation>
-				<property>
-					<name>!VERSION_NUMBER</name>
-				</property>
-			</activation>
-			<properties>
-				<deployRepoUrl>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</deployRepoUrl>
-				<isRelease>false</isRelease>
-			</properties>
-		</profile>
-	</profiles>
 	<repositories>
 		<repository>
 			<id>edapt-p2-repo</id>
@@ -69,70 +55,15 @@
 		<finalName>${project.artifactId}-${product.version}</finalName>
 		<plugins>
 			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.4.3</version>
-				<executions>
-					<execution>
-						<id>replace-pom-placeholder</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<resources>
-								<resource>
-									<directory>${basedir}</directory>
-									<includes>
-										<include>pom.xml</include>
-									</includes>
-									<filtering>true</filtering>
-								</resource>
-							</resources>
-							<outputDirectory>${project.build.directory}/pom-install-deploy-fix</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.1</version>
 			</plugin>
 			<plugin>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.3.1</version>
-				<executions>
-					<execution>
-						<id>overwrite-pom</id>
-						<phase>install</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<packaging>pom</packaging>
-							<file>target/pom-install-deploy-fix/pom.xml</file>
-							<pomFile>target/pom-install-deploy-fix/pom.xml</pomFile>
-							<version>${project.version}</version>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.5</version>
-				<executions>
-					<execution>
-						<id>overwrite-pom</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy-file</goal>
-						</goals>
-						<configuration>
-							<packaging>pom</packaging>
-							<file>target/pom-install-deploy-fix/pom.xml</file>
-							<pomFile>target/pom-install-deploy-fix/pom.xml</pomFile>
-							<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
-							<version>${project.version}</version>
-							<updateReleaseInfo>${isRelease}</updateReleaseInfo>
-							<uniqueVersion>false</uniqueVersion>
-						</configuration>
-					</execution>
-				</executions>
+				<artifactId>maven-scm-plugin</artifactId>
+				<configuration>
+					<tag>${project.artifactId}-${project.version}</tag>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
@@ -221,13 +152,6 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<artifactId>maven-scm-plugin</artifactId>
-					<version>1.4</version>
-					<configuration>
-						<tag>${project.artifactId}-${VERSION_NUMBER}</tag>
-					</configuration>
-				</plugin>
-				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
 					<version>1.0.0</version>
@@ -301,17 +225,21 @@
 	</dependencies>
 	<packaging>pom</packaging>
 	<distributionManagement>
+		<repository>
+			<id>artifact-repository</id>
+			<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
+		</repository>
 		<snapshotRepository>
 			<id>github-snapshot</id>
 			<name>GitHub snapshot</name>
 			<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
 			<uniqueVersion>true</uniqueVersion>
 		</snapshotRepository>
-		<repository>
-			<id>github-release</id>
-			<name>GitHub release</name>
-			<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
-			<uniqueVersion>false</uniqueVersion>
-		</repository>
+<!-- 		<repository> -->
+<!-- 			<id>github-release</id> -->
+<!-- 			<name>GitHub release</name> -->
+<!-- 			<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url> -->
+<!-- 			<uniqueVersion>false</uniqueVersion> -->
+<!-- 		</repository> -->
 	</distributionManagement>
 </project>
