Update Maven plugin version
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -61,6 +61,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.11.2</version>
 				<configuration>
 					<tag>${project.artifactId}-${project.version}</tag>
 				</configuration>
