Repository uniqueVersion false
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -238,6 +238,7 @@
 		<repository>
 			<id>artifact-repository</id>
 			<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
+			<uniqueVersion>false</uniqueVersion>
 		</repository>
 		<snapshotRepository>
 			<id>github-snapshot</id>
