--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,4 +31,4 @@ jobs:
       run: |
        git config --global user.name "Kyrill Zotkin"
        git config --global user.email "143617+kyrillzotkin@users.noreply.github.com"
-       mvn deploy scm:tag -Drevision=$buildQualifier -s settings.xml
+       mvn deploy -s settings.xml
