Replace mvn deploy with mvn release:prepare + mvn release:perform
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,4 +31,5 @@ jobs:
       run: |
        git config --global user.name "Kyrill Zotkin"
        git config --global user.email "143617+kyrillzotkin@users.noreply.github.com"
-       mvn deploy -s settings.xml
+       mvn release:prepare -s settings.xml
+       mvn release:perform -s settings.xml
