--- a/release.properties
+++ b/release.properties
@@ -14,3 +14,5 @@ project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.ui=0.8.10
 project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.ui=0.8.10-SNAPSHOT
 project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.workbench=0.8.10
 project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.workbench=0.8.10-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.target=0.8.10
+project.dev.org.enterprisedomain\:org.enterprisedomain.target=0.8.10-SNAPSHOT 
