Add version tag
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -10,6 +10,7 @@
 		<relativePath>../../</relativePath>
 	</parent>
 	<artifactId>org.enterprisedomain.target</artifactId>
+	<version>0.8.10-SNAPSHOT</version>
 	<packaging>eclipse-target-definition</packaging>
 	<build>
 		<plugins>
