Update target platform classifier
Signed-off-by: Kyrill Zotkin <43617+kyrillzotkin@users.noreply.github.com >

--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -47,7 +47,7 @@
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
 							<version>0.8.10-SNAPSHOT</version>
-							<classifier>org.enterprisedomain.target.target</classifier>
+							<classifier>org.enterprisedomain.target</classifier>
 						</artifact>
 					</target>
 					<executionEnvironment>JavaSE-11</executionEnvironment>
