--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -29,7 +29,11 @@
 			<id>ecp</id>
 			<layout>p2</layout>
 			<url>http://download.eclipse.org/ecp/releases/releases_target_124</url>
-		</repository>		
+		</repository>
+		<repository>
+			<id>tycho-p2</id>
+			<url>https://mvnrepository.com/artifact/org.eclipse.tycho/tycho-p2-facade</url>
+		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -225,6 +229,11 @@
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tycho</groupId>
+			<artifactId>tycho-p2-facade</artifactId>
+			<version>${tycho.version}</version>
 		</dependency>
 	</dependencies>
 	<packaging>pom</packaging>
