--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -51,6 +51,7 @@
 						</artifact>
 					</target>
 					<executionEnvironment>JavaSE-11</executionEnvironment>
+					<resolver>p2</resolver>
 					<dependency-resolution>
 						<profileProperties>
 							<org.eclipse.swt.buildtime>true</org.eclipse.swt.buildtime>
