--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -21,7 +21,7 @@
 			<layout>p2</layout>
 		</repository>
 		<repository>
-			<id>2020-03</id>
+			<id>2020-06</id>
 			<layout>p2</layout>
 			<url>http://download.eclipse.org/releases/2020-06</url>
 		</repository>
@@ -29,6 +29,11 @@
 			<id>ecp</id>
 			<layout>p2</layout>
 			<url>http://download.eclipse.org/ecp/releases/releases_target_124</url>
+		</repository>
+		<repository>
+			<id>eclipse</id>
+			<layout>p2</layout>
+			<url>https://download.eclipse.org/eclipse/updates/4.16</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
