Try mvn clean install
Signed-off-by: Kyrill Zotkin <43617+kyrillzotkin@users.noreply.github.com >

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,6 @@ jobs:
        mvn -B clean package --file pom.xml
     - name: Deploy with Maven
       run: |
-       git config --global user.name "Kyrill Zotkin"
-       git config --global user.email "143617+kyrillzotkin@users.noreply.github.com"
        mvn release:prepare -s settings.xml
+       mvn clean install
        mvn release:perform -s settings.xml
